--- a/myapp/pubspec.yaml
+++ b/myapp/pubspec.yaml
@@ -40,8 +40,8 @@ dependencies:
 
 flutter_icons:
   android: true
-  image_path: "image/logo.png"
-
+  image_path: "assets/image/logo.png"
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -62,7 +62,8 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
-
+  assets:
+    - assets/images/
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
