--- a/myapp/pubspec.yaml
+++ b/myapp/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_launcher_icons: ^0.11.0
   firebase_core: ^0.4.2+2
+  bubble: ^1.2.1
+  intl: ^0.18.0
 
 flutter_icons:
   android: true
