--- a/myapp/android/app/build.gradle
+++ b/myapp/android/app/build.gradle
@@ -24,6 +24,8 @@ if (flutterVersionName == null) {
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
+apply plugin: 'com.google.gms.google-services'
+
 
 android {
     compileSdkVersion flutter.compileSdkVersion
@@ -47,7 +49,7 @@ android {
         applicationId "com.example.myapp"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-build-configuration.
-        minSdkVersion flutter.minSdkVersion
+        minSdkVersion 19
         targetSdkVersion flutter.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
@@ -68,4 +70,19 @@ flutter {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation platform('com.google.firebase:firebase-bom:31.3.0')
+    implementation 'com.google.firebase:firebase-auth'
+    implementation 'com.google.android.gms:play-services-auth:20.5.0'
+}
+
+task wrapper(type: Wrapper) {
+    gradleVersion = '7.2'
+}
+
+tasks.register("prepareKotlinBuildScriptModel", KotlinBuildScriptModelTask) {
+    // Add any required parameters or configurations
+}
+
+class KotlinBuildScriptModelTask extends DefaultTask {
+    // Add any required parameters or configurations
 }
