--- a/myapp/pubspec.yaml
+++ b/myapp/pubspec.yaml
@@ -36,10 +36,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  flutter_launcher_icons: ^0.12.0
+  flutter_launcher_icons: ^0.13.1
   bubble: ^1.2.1
   intl: ^0.18.0
   firebase_core: ^2.8.0
+  firebase_auth: ^4.2.2
+  google_sign_in: ^6.1.0
 
 flutter_icons:
   android: true
