--- a/myapp/pubspec.yaml
+++ b/myapp/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   firebase_core: ^2.8.0
   firebase_auth: ^4.2.2
   google_sign_in: ^6.1.0
+  cloud_firestore: ^4.5.3
+  shared_preferences: ^2.0.8
 
 flutter_icons:
   android: true
