--- a/myapp/pubspec.yaml
+++ b/myapp/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   google_sign_in: ^6.1.0
   cloud_firestore: ^4.5.3
   shared_preferences: ^2.0.8
+  provider: ^6.0.5
 
 flutter_icons:
   android: true
